--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
     <div class="col-sm-4"  >
       <h3>Tech</h3>
+      <h2>Tech</h2>
       <p>In metus vulputate eu scelerisque felis imperdiet proin fermentum leo.</p>
 	  <img src="img/tech.png" class="img-fluid">
 	  <p>Scelerisque in dictum non consectetur a. Et sollicitudin ac orci phasellus egestas tellus rutrum tellus. <b>Nisi quis eleifend quam adipiscing vitae proin. </b>Nunc vel risus commodo viverra maecenas accumsan lacus. </p>
